--- a/gb/24/4/16/n14227304.md
+++ b/gb/24/4/16/n14227304.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵助道德的提升 彰化首场售罄 县长盛赞</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/04/id14227316-240416145621100815-600x400.jpg" />
 <h6>2024年4月16日晚间，神韵纽约艺术团在彰化员林演艺厅的首场演出大获成功，演出爆满。（龚安妮／大纪元）
@@ -8,9 +8,10 @@
 <hr>
 	<p>【大纪元2024年04月17日讯】（大纪元台湾彰化记者站报导）2024年4月16日晚间，神韵纽约艺术团在彰化员林演艺厅的首场演出大爆满，票房售罄。彰化县长王惠美观赏之后表示，“每次来看神韵就有一种像是在追求真善美的感觉，有助善良、道德的提升。”</p>
 <p>彰化是神韵纽约艺术团2024年在台湾演出的最后一个城市，蔚为当地年度艺文盛事，包括彰化县长王惠美、立法委员陈秀宝、台中市议会议长张清照、副议长颜莉敏、溪湖镇长何炳桦、二林镇长蔡诗杰等地方首长与民意代表，皆特地致赠花篮，祝神韵演出成功。</p>
-<figure id="attachment_14227307" aria-describedby="caption-attachment-14227307" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14227307-240416151056100815.jpg"><img class="size-large wp-image-14227307" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14227307-240416151056100815-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14227307" class="wp-caption-text">2024年4月16日，神韵纽约艺术团在彰化员林演艺厅进行首场演出。（龚安妮／大纪元）</figcaption></figure>
+<figure id="attachment_14227987" aria-describedby="caption-attachment-14227987" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14227987-240417105012100815.jpg"><img decoding="async" class="size-large wp-image-14227987" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14227987-240417105012100815-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14227987" class="wp-caption-text">彰化县长王惠美、台中市议会议长张清照、副议长颜莉敏、立法委员陈秀宝、溪湖镇长何炳桦、二林镇长蔡诗杰、永靖乡长魏硕卫致赠花篮，祝贺神韵演出成功。（龚安妮／大纪元）</figcaption></figure>
+<figure id="attachment_14227307" aria-describedby="caption-attachment-14227307" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14227307-240416151056100815.jpg"><img decoding="async" class="size-large wp-image-14227307" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14227307-240416151056100815-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14227307" class="wp-caption-text">2024年4月16日，神韵纽约艺术团在彰化员林演艺厅进行首场演出。（龚安妮／大纪元）</figcaption></figure>
 <h2><span style="font-weight: 400;">彰化县长：神韵有助善良、道德提升</span></h2>
-<figure id="attachment_14227308" aria-describedby="caption-attachment-14227308" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14227308-240416125138100815.jpg"><img class="size-large wp-image-14227308" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14227308-240416125138100815-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14227308" class="wp-caption-text">2024年4月16日晚间，彰化县长王惠美观赏神韵纽约艺术团在彰化员林演艺厅的首场演出。（龚安妮／大纪元）</figcaption></figure>
+<figure id="attachment_14227308" aria-describedby="caption-attachment-14227308" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14227308-240416125138100815.jpg"><img decoding="async" class="size-large wp-image-14227308" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14227308-240416125138100815-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14227308" class="wp-caption-text">2024年4月16日晚间，彰化县长王惠美观赏神韵纽约艺术团在彰化员林演艺厅的首场演出。（龚安妮／大纪元）</figcaption></figure>
 <p>彰化县长王惠美已经是第三次聆赏神韵。她赞叹，“今天真的非常感动，每次来看神韵就有一种像是在追求真善美的感觉。整个节目非常紧凑，而且是有故事性的。她把中国传统故事透过舞蹈呈现出来。让人在看的过程中，又有艺术文化涵盖在里面，这非常不容易。”</p>
 <p>“更让我讶异的是，她来自于纽约，但是却又这么重视中华文化，让传统艺术跟文化能够继续不断地绵延下去，真的非常不容易。”王惠美说，“从佛主显现，一直到孙悟空取经，以及越王勾践的故事，这都是在历史文化里可以看得到的经典故事，透过艺术舞蹈来呈现，真的让人非常感动。”</p>
 <p>她表示，节目整体安排“都很棒耶，节目呈现出来很紧凑，而且很有意义”，为人带来“精神上的启发，我想追求自由非常重要，但是在追求自由的过程中，我们也不能侵犯到他人的自由，这点很重要”。</p>
@@ -18,7 +19,7 @@
 <p>身为百里侯，被问及欣赏神韵对于未来带领市府团队有没有特别的启发？王惠美说，“我想还是会继续走‘道’这条路，因为我觉得‘道’很重要，追求真理然后实践，我就是希望民众能够幸福快乐，地方能够不断的进步，让大家都能够有幸福的感觉。”</p>
 <p>“台上一分钟，台下要十年功，神韵一定是网罗了非常多的人才，经过非常好的指导，很密切的练习，才能够拥有今天的成就，这很不容易。我想真的要对所有神韵幕前幕后的伙伴们说声‘真的辛苦你们了，你们真的很棒’。”王惠美邀请大家，“有机会真的要来看神韵，真的很棒！”</p>
 <h2><span style="font-weight: 400;">教育事业执行长：感受到神韵的含义有神的旨意</span></h2>
-<figure id="attachment_14227311" aria-describedby="caption-attachment-14227311" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14227311-240416125142100815.jpg"><img class="size-large wp-image-14227311" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14227311-240416125142100815-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14227311" class="wp-caption-text">2024年4月16日晚间，教育事业体系执行长吴建华观赏神韵纽约艺术团在彰化员林演艺厅的首场演出。（龚安妮／大纪元）</figcaption></figure>
+<figure id="attachment_14227311" aria-describedby="caption-attachment-14227311" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14227311-240416125142100815.jpg"><img decoding="async" class="size-large wp-image-14227311" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14227311-240416125142100815-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14227311" class="wp-caption-text">2024年4月16日晚间，教育事业体系执行长吴建华观赏神韵纽约艺术团在彰化员林演艺厅的首场演出。（龚安妮／大纪元）</figcaption></figure>
 <p>大学门教育事业体系执行长吴建华带着妈妈、太太、儿子一起来看演出。首次观赏神韵，他说，被神韵深深感动了。</p>
 <p>他赞佩中国古典舞表现力精湛，“神韵用舞蹈还有故事传承中国传统文化，让我们去体认孝心也好，还有老师授业的故事都在里面，这是非常不容易的，舞蹈竟然可以蕴含那么多深刻的涵意，这非常难得啊，真的是非常难得！”</p>
 <p>对于道德观跟信仰的部分，吴建华表示，“体会的非常深刻，整个节目的安排包括演员的肢体动作，还有故事编排都非常到位，还有要传达的意思也让我们非常感动，我觉得这个是非常难得的演出”</p>
@@ -28,43 +29,42 @@
 <p>“事实上，天上的神应当会感化人，让我们这个世界过得更美好，只要愿意往好的一面想，存善心、发善念去做好事情，不管对个人也好，还是对未来所有事物，都是好的，这也是我的感动点。”</p>
 <p>吴建华说，被神韵演员积极的精神所感动，“从演出过程中，我看到了演员的努力，包括他们的团队精神，还有整个策划的概念，这些积极、认真的态度，对我当然也会有所启发，我觉得应当要把事业做得更好。”</p>
 <h2>神韵揭露中共恶行 企业董事长：很震撼</h2>
-<figure id="attachment_14227315" aria-describedby="caption-attachment-14227315" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14227315-240416122252100815.jpg"><img class="size-large wp-image-14227315" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14227315-240416122252100815-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14227315" class="wp-caption-text">2024年4月16日晚间，生活用品公司董事长陈瑞柏观赏神韵纽约艺术团在彰化员林演艺厅的首场演出。（龙芳／大纪元）</figcaption></figure>
+<figure id="attachment_14227315" aria-describedby="caption-attachment-14227315" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14227315-240416122252100815.jpg"><img decoding="async" class="size-large wp-image-14227315" title="" src="https://i.epochtimes.com/assets/uploads/2024/04/id14227315-240416122252100815-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14227315" class="wp-caption-text">2024年4月16日晚间，生活用品公司董事长陈瑞柏观赏神韵纽约艺术团在彰化员林演艺厅的首场演出。（龙芳／大纪元）</figcaption></figure>
 <p>“表现中共欺负老百姓的舞剧，要多做一点，要向全世界讲，这个很重要，不然全世界不知道它在做什么坏事。”生活用品公司董事长陈瑞柏，被神韵揭示中共迫害民众的故事给震撼了，“因为我没有看过这个节目，所以很震撼！”</p>
 <p>陈瑞柏表示，喜欢孙悟空的故事，“那是我们耳熟能详的，结合天幕呈现在舞台上，那个背景很特别”看到天幕出现《金猴斗红孩》的故事，他认为，“我们台湾都是拜佛的，所以有菩萨出现就很好，中共把菩萨都弄掉了，完全是无信仰，它们自己找死，还把老百姓搞得像狗一样。”</p>
 <p>“我觉得人性本善良，这个（共产党）制度在中国，只会是把中国人搞死而已。”他认为，中共就是在迫害善良的中国人，“灾难太多了！”</p>
 <p><span style="font-weight: 400;">责任编辑：施暮羽?</span></p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/3/n13772613.md#1">公司总经理：把握神韵每次来台湾的机会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/6/n13774469.md#1">扶轮社副秘书长：盼神韵在台湾能演更多场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/10/n13777889.md#1">花莲县长：神韵提升整个台湾的艺术能量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938880.md#1">大陆移民网红：在台湾看到神韵 非常荣幸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958549.md#1">印刷公司董事长：每年都期待神韵莅临台湾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960645.md#1">台湾外交部参事赞神韵：世界顶级无懈可击</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/3/n13772613.md#1">公司总经理：把握神韵每次来台湾的机会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/6/n13774469.md#1">扶轮社副秘书长：盼神韵在台湾能演更多场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/10/n13777889.md#1">花莲县长：神韵提升整个台湾的艺术能量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/26/n13938880.md#1">大陆移民网红：在台湾看到神韵 非常荣幸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/25/n13958549.md#1">印刷公司董事长：每年都期待神韵莅临台湾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/29/n13960645.md#1">台湾外交部参事赞神韵：世界顶级无懈可击</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/18/n10492678.md#1" target="_blank">仰岳：共产党如何干扰美国的对华政策</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11257250.md#1" target="_blank">【征文】凌晓辉：贞洁论（五）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank">在家暴进化论中堕落 一本书让他翻转人生</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223291.md#1">哈佛大学教授：UFO经多维空间到地球</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221764.md#1">文武双全的儒家典范颜真卿 何以终成道教神仙？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/6/n14219649.md#1">孩子送给我们的五种人生礼物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14220557.md#1">【未解之谜】潜伏地球的外星生物？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223708.md#1">【未解之谜】日食背后的神秘力量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223512.md#1">【百年真相】影星王莹和她丈夫为何被关秦城</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/15/n14226467.md#1">【神韵早期节目】汉丽舞长袖（2017年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/13/n14224941.md#1">【中国禁闻】伊朗空袭以色列 背后有中共支持？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/13/n14225083.md#1">【时事军事】日本重返航母超级大国？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/13/n14225032.md#1">【菁英论坛】江河日下 传习六月将出“大招”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/14/n14225448.md#1">爱女长大了 贝克汉要求他的三个儿子保护好小妹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/13/n14225068.md#1">黄磊承认躺平：2年没拍戏 3年没当男主角</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/13/n14225107.md#1">陆女星关凌辅导儿女作业气到心绞痛 评论炸锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/15/n14226160.md#1">《疯神无双》搞笑艺人山猪猝逝 享年38岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/15/n14226451.md#1">梁朝伟第6度获封金像影帝 刘嘉玲代领奖爆原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/15/n14226229.md#1">专家：很多人替植物浇水的方式都错了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/14/n14225394.md#1">在上班第一周 新进员工千万别做这些傻事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/14/n14225533.md#1">美国人为买房做了哪些牺牲？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/2/n14216902.md#1">了解愤怒的10个要点 你会怒气全消</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14224416.md#1">肾好才长寿 韭菜温肾疏肝 2吃法最强</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/16/n14227304.htm">神韵助道德的提升 彰化首场售罄 县长盛赞</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/4/16/n14227304.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405076.md#1">人算不如天算 嫉妒心反害了自身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412120.md#1">【未解之谜】痴迷好莱坞 《乱世佳人》剧作家转世重生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399999.md#1">郑板桥教子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416062.md#1">【时事金扫描】川普突改就职地址 重振好莱坞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416782.md#1">【时事金扫描】川普就职典礼再变 隐藏大事？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416095.md#1">【车评】拥有STI灵魂的跑车 2025 Subaru WRX tS</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413081.md#1">除杂货外 Costco六款时尚设计师服装太超值</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415954.md#1">荷兰决定不公开ASML敏感设备对华出口数据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415897.md#1">【快讯】美最高院裁决TikTok败诉 维持禁令</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416718.md#1">泰缅边境失联模特杨泽琪获救 指甲被拔引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416015.md#1">港片在大陆市场连连失利 谢霆锋转向开演唱会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415967.md#1">3个女儿同时发烧住院输液 谢娜自曝情绪崩溃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415285.md#1">新片在韩国票房遭遇滑铁卢 宋仲基哽咽拭泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415950.md#1">布鲁斯失智后首露面 握手致谢洛杉矶救灾人员</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415611.md#1">用泡过的茶包做堆肥？ 你应该先做一件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414719.md#1">【元气99】逢年过节 怎样食得开心又健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412855.md#1">自我诊断和改善 摆脱睡眠呼吸中止症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410940.md#1">食物与心灵存在秘密连结 吃对了情绪才好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412714.md#1">中医师推荐年货中药材 为年菜增添滋补功效</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/16/n14227304.htm">神韵助道德的提升 彰化首场售罄 县长盛赞</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/16/n14227304.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
